{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 390,
  "lineage": "f232497e-8e0f-ffa9-23d9-df64de1c48a9",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:676206911983:security-group/sg-0275d7d00e1ec775a",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0275d7d00e1ec775a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0607e19a165de2e97"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "butik-online-cluster-20250918120922469300000009",
            "name_prefix": "butik-online-cluster-",
            "owner_id": "676206911983",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "demo",
              "ManagedBy": "Terraform",
              "Name": "butik-online-cluster",
              "Project": "butik-online-eks"
            },
            "tags_all": {
              "Environment": "demo",
              "ManagedBy": "Terraform",
              "Name": "butik-online-cluster",
              "Project": "butik-online-eks"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e8fd6ee1a9c7686d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:676206911983:security-group/sg-0607e19a165de2e97",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0607e19a165de2e97",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0c19d03060d4ecb23"
                ],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 4443/tcp webhook",
                "from_port": 4443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0275d7d00e1ec775a"
                ],
                "self": false,
                "to_port": 4443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 6443/tcp webhook",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0275d7d00e1ec775a"
                ],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 8443/tcp webhook",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0275d7d00e1ec775a"
                ],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 9443/tcp webhook",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0275d7d00e1ec775a"
                ],
                "self": false,
                "to_port": 9443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0275d7d00e1ec775a"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0275d7d00e1ec775a"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS UDP",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node ingress on ephemeral ports",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "butik-online-node-20250918120922334600000008",
            "name_prefix": "butik-online-node-",
            "owner_id": "676206911983",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "demo",
              "ManagedBy": "Terraform",
              "Name": "butik-online-node",
              "Project": "butik-online-eks",
              "kubernetes.io/cluster/butik-online": "owned"
            },
            "tags_all": {
              "Environment": "demo",
              "ManagedBy": "Terraform",
              "Name": "butik-online-node",
              "Project": "butik-online-eks",
              "kubernetes.io/cluster/butik-online": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e8fd6ee1a9c7686d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-659182496",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0275d7d00e1ec775a",
            "security_group_rule_id": "sgr-01991bfb1913b3eef",
            "self": false,
            "source_security_group_id": "sg-0607e19a165de2e97",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-1584497474",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0607e19a165de2e97",
            "security_group_rule_id": "sgr-0d05b4d09c5ff1a1d",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-3996257521",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0607e19a165de2e97",
            "security_group_rule_id": "sgr-00a7631f1df754b12",
            "self": false,
            "source_security_group_id": "sg-0275d7d00e1ec775a",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-2072617282",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0607e19a165de2e97",
            "security_group_rule_id": "sgr-0f5a18dd6d2b2f11e",
            "self": false,
            "source_security_group_id": "sg-0275d7d00e1ec775a",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-2999699156",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0607e19a165de2e97",
            "security_group_rule_id": "sgr-05b55f8eb936821fb",
            "self": false,
            "source_security_group_id": "sg-0275d7d00e1ec775a",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-2711091957",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0607e19a165de2e97",
            "security_group_rule_id": "sgr-04b30787e1f05f643",
            "self": false,
            "source_security_group_id": "sg-0275d7d00e1ec775a",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-3308702014",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0607e19a165de2e97",
            "security_group_rule_id": "sgr-0a5bf5e2e458f0eb9",
            "self": false,
            "source_security_group_id": "sg-0275d7d00e1ec775a",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-2808136025",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0607e19a165de2e97",
            "security_group_rule_id": "sgr-0391b19817f558110",
            "self": false,
            "source_security_group_id": "sg-0275d7d00e1ec775a",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-1132077548",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0607e19a165de2e97",
            "security_group_rule_id": "sgr-087aacd86762a618d",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-509834785",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0607e19a165de2e97",
            "security_group_rule_id": "sgr-08a4f06b0f99ff77c",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-3124549070",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0607e19a165de2e97",
            "security_group_rule_id": "sgr-080e6e0add95ebba4",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:676206911983:network-acl/acl-0e750d240c13c6780",
            "default_network_acl_id": "acl-0e750d240c13c6780",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0e750d240c13c6780",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "676206911983",
            "subnet_ids": [
              "subnet-03932aae1ce40f290",
              "subnet-041cf8f44b72a1f9e",
              "subnet-041d3da2cd2303a66",
              "subnet-04fe513e3982cc863",
              "subnet-0a70d237eaae72926",
              "subnet-0d736d1bbc9af68ee"
            ],
            "tags": {
              "Environment": "demo",
              "ManagedBy": "Terraform",
              "Name": "butik-online-vpc-default",
              "Project": "butik-online-eks"
            },
            "tags_all": {
              "Environment": "demo",
              "ManagedBy": "Terraform",
              "Name": "butik-online-vpc-default",
              "Project": "butik-online-eks"
            },
            "vpc_id": "vpc-0e8fd6ee1a9c7686d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:676206911983:route-table/rtb-05b5914a3605f4449",
            "default_route_table_id": "rtb-05b5914a3605f4449",
            "id": "rtb-05b5914a3605f4449",
            "owner_id": "676206911983",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "demo",
              "ManagedBy": "Terraform",
              "Name": "butik-online-vpc-default",
              "Project": "butik-online-eks"
            },
            "tags_all": {
              "Environment": "demo",
              "ManagedBy": "Terraform",
              "Name": "butik-online-vpc-default",
              "Project": "butik-online-eks"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0e8fd6ee1a9c7686d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:676206911983:security-group/sg-044e02c3c782443e9",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-044e02c3c782443e9",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "676206911983",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "demo",
              "ManagedBy": "Terraform",
              "Name": "butik-online-vpc-default",
              "Project": "butik-online-eks"
            },
            "tags_all": {
              "Environment": "demo",
              "ManagedBy": "Terraform",
              "Name": "butik-online-vpc-default",
              "Project": "butik-online-eks"
            },
            "vpc_id": "vpc-0e8fd6ee1a9c7686d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-028d29b41e7fec7f7",
            "arn": "arn:aws:ec2:ap-southeast-1:676206911983:elastic-ip/eipalloc-028d29b41e7fec7f7",
            "association_id": "eipassoc-002c68db04229c110",
            "domain": "vpc",
            "id": "eipalloc-028d29b41e7fec7f7",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-0f68bac6352f12282",
            "private_dns": "ip-10-0-107-41.ap-southeast-1.compute.internal",
            "private_ip": "10.0.107.41",
            "public_dns": "ec2-52-77-184-97.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "52.77.184.97",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "demo",
              "ManagedBy": "Terraform",
              "Name": "butik-online-vpc-ap-southeast-1a",
              "Project": "butik-online-eks"
            },
            "tags_all": {
              "Environment": "demo",
              "ManagedBy": "Terraform",
              "Name": "butik-online-vpc-ap-southeast-1a",
              "Project": "butik-online-eks"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:676206911983:internet-gateway/igw-0f119eca5c15c9556",
            "id": "igw-0f119eca5c15c9556",
            "owner_id": "676206911983",
            "tags": {
              "Environment": "demo",
              "ManagedBy": "Terraform",
              "Name": "butik-online-vpc",
              "Project": "butik-online-eks"
            },
            "tags_all": {
              "Environment": "demo",
              "ManagedBy": "Terraform",
              "Name": "butik-online-vpc",
              "Project": "butik-online-eks"
            },
            "vpc_id": "vpc-0e8fd6ee1a9c7686d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-028d29b41e7fec7f7",
            "association_id": "eipassoc-002c68db04229c110",
            "connectivity_type": "public",
            "id": "nat-0f0cbd9251b86e277",
            "network_interface_id": "eni-0f68bac6352f12282",
            "private_ip": "10.0.107.41",
            "public_ip": "52.77.184.97",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-04fe513e3982cc863",
            "tags": {
              "Environment": "demo",
              "ManagedBy": "Terraform",
              "Name": "butik-online-vpc-ap-southeast-1a",
              "Project": "butik-online-eks"
            },
            "tags_all": {
              "Environment": "demo",
              "ManagedBy": "Terraform",
              "Name": "butik-online-vpc-ap-southeast-1a",
              "Project": "butik-online-eks"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-058d1f33d463bb4691080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0f0cbd9251b86e277",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-058d1f33d463bb469",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f119eca5c15c9556",
            "id": "r-rtb-0663f747f83c5b1d51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0663f747f83c5b1d5",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:676206911983:route-table/rtb-058d1f33d463bb469",
            "id": "rtb-058d1f33d463bb469",
            "owner_id": "676206911983",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f0cbd9251b86e277",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "demo",
              "ManagedBy": "Terraform",
              "Name": "butik-online-vpc-private",
              "Project": "butik-online-eks"
            },
            "tags_all": {
              "Environment": "demo",
              "ManagedBy": "Terraform",
              "Name": "butik-online-vpc-private",
              "Project": "butik-online-eks"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e8fd6ee1a9c7686d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:676206911983:route-table/rtb-0663f747f83c5b1d5",
            "id": "rtb-0663f747f83c5b1d5",
            "owner_id": "676206911983",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f119eca5c15c9556",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "demo",
              "ManagedBy": "Terraform",
              "Name": "butik-online-vpc-public",
              "Project": "butik-online-eks"
            },
            "tags_all": {
              "Environment": "demo",
              "ManagedBy": "Terraform",
              "Name": "butik-online-vpc-public",
              "Project": "butik-online-eks"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e8fd6ee1a9c7686d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d9dbf269fd99228c",
            "route_table_id": "rtb-058d1f33d463bb469",
            "subnet_id": "subnet-0d736d1bbc9af68ee"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f0cda2d8a5934503",
            "route_table_id": "rtb-058d1f33d463bb469",
            "subnet_id": "subnet-0a70d237eaae72926"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bab191d2082eb46b",
            "route_table_id": "rtb-058d1f33d463bb469",
            "subnet_id": "subnet-041cf8f44b72a1f9e"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0375448c2c3df27de",
            "route_table_id": "rtb-0663f747f83c5b1d5",
            "subnet_id": "subnet-04fe513e3982cc863"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09aad990f6bae5950",
            "route_table_id": "rtb-0663f747f83c5b1d5",
            "subnet_id": "subnet-041d3da2cd2303a66"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c300c023d1f24eb3",
            "route_table_id": "rtb-0663f747f83c5b1d5",
            "subnet_id": "subnet-03932aae1ce40f290"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:676206911983:subnet/subnet-0d736d1bbc9af68ee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.0.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d736d1bbc9af68ee",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "676206911983",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "demo",
              "ManagedBy": "Terraform",
              "Name": "butik-online-vpc-private-ap-southeast-1a",
              "Project": "butik-online-eks",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "demo",
              "ManagedBy": "Terraform",
              "Name": "butik-online-vpc-private-ap-southeast-1a",
              "Project": "butik-online-eks",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0e8fd6ee1a9c7686d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:676206911983:subnet/subnet-0a70d237eaae72926",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.32.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a70d237eaae72926",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "676206911983",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "demo",
              "ManagedBy": "Terraform",
              "Name": "butik-online-vpc-private-ap-southeast-1b",
              "Project": "butik-online-eks",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "demo",
              "ManagedBy": "Terraform",
              "Name": "butik-online-vpc-private-ap-southeast-1b",
              "Project": "butik-online-eks",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0e8fd6ee1a9c7686d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:676206911983:subnet/subnet-041cf8f44b72a1f9e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.64.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-041cf8f44b72a1f9e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "676206911983",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "demo",
              "ManagedBy": "Terraform",
              "Name": "butik-online-vpc-private-ap-southeast-1c",
              "Project": "butik-online-eks",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "demo",
              "ManagedBy": "Terraform",
              "Name": "butik-online-vpc-private-ap-southeast-1c",
              "Project": "butik-online-eks",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0e8fd6ee1a9c7686d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:676206911983:subnet/subnet-04fe513e3982cc863",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.96.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04fe513e3982cc863",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "676206911983",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "demo",
              "ManagedBy": "Terraform",
              "Name": "butik-online-vpc-public-ap-southeast-1a",
              "Project": "butik-online-eks",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "demo",
              "ManagedBy": "Terraform",
              "Name": "butik-online-vpc-public-ap-southeast-1a",
              "Project": "butik-online-eks",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0e8fd6ee1a9c7686d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:676206911983:subnet/subnet-041d3da2cd2303a66",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.112.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-041d3da2cd2303a66",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "676206911983",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "demo",
              "ManagedBy": "Terraform",
              "Name": "butik-online-vpc-public-ap-southeast-1b",
              "Project": "butik-online-eks",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "demo",
              "ManagedBy": "Terraform",
              "Name": "butik-online-vpc-public-ap-southeast-1b",
              "Project": "butik-online-eks",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0e8fd6ee1a9c7686d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:676206911983:subnet/subnet-03932aae1ce40f290",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.128.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03932aae1ce40f290",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "676206911983",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "demo",
              "ManagedBy": "Terraform",
              "Name": "butik-online-vpc-public-ap-southeast-1c",
              "Project": "butik-online-eks",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "demo",
              "ManagedBy": "Terraform",
              "Name": "butik-online-vpc-public-ap-southeast-1c",
              "Project": "butik-online-eks",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0e8fd6ee1a9c7686d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:676206911983:vpc/vpc-0e8fd6ee1a9c7686d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e750d240c13c6780",
            "default_route_table_id": "rtb-05b5914a3605f4449",
            "default_security_group_id": "sg-044e02c3c782443e9",
            "dhcp_options_id": "dopt-036415916834e47a4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e8fd6ee1a9c7686d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05b5914a3605f4449",
            "owner_id": "676206911983",
            "tags": {
              "Environment": "demo",
              "ManagedBy": "Terraform",
              "Name": "butik-online-vpc",
              "Project": "butik-online-eks"
            },
            "tags_all": {
              "Environment": "demo",
              "ManagedBy": "Terraform",
              "Name": "butik-online-vpc",
              "Project": "butik-online-eks"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}